--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,16 @@
           }
         },
         {
+          "name": "Cachix",
+          "uses": "cachix/cachix-action@v12",
+          "with": {
+            "name": "squalus-example-stackage-flake",
+            "authToken": "${{ secrets.CACHIX_AUTH_TOKEN }}"
+          }
+        },
+        {
           "name": "Run `nix build`",
-          "run": "nix build -L"
+          "run": "nix build -L .#hello"
         }
       ]
     }
