--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,9 @@
         },
         {
           "name": "Install Nix",
-          "uses": "DeterminateSystems/nix-installer-action@v4",
+          "uses": "cachix/install-nix-action@v20",
           "with": {
-            "diagnostic-endpoint": "",
-            "extra-conf": "accept-flake-config = true"
+              "nix_path": "nixpkgs=channel:nixos-unstable"
           }
         },
         {
@@ -24,12 +23,17 @@
           "uses": "cachix/cachix-action@v12",
           "with": {
             "name": "squalus-example-stackage-flake",
-            "authToken": "${{ secrets.CACHIX_AUTH_TOKEN }}"
+            "authToken": "${{ secrets.CACHIX_AUTH_TOKEN }}",
+            "cachixArgs": "-v"
           }
         },
         {
           "name": "Run `nix build`",
           "run": "nix build -L .#hello"
+        },
+        {
+          "name": "Run `nix-shell`",
+          "run": "nix develop"
         }
       ]
     }
