--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,7 @@
           "uses": "cachix/cachix-action@v12",
           "with": {
             "name": "squalus-example-stackage-flake",
-            "authToken": "${{ secrets.CACHIX_AUTH_TOKEN }}",
-            "cachixArgs": "-v"
+            "authToken": "${{ secrets.CACHIX_AUTH_TOKEN }}"
           }
         },
         {
