--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,11 @@
         },
         {
           "name": "Run `nix build`",
-          "run": "nix build -L .#hello"
+          "run": "nix build -L"
+        },
+        {
+          "name": "Run `nix develop`",
+          "run": "nix develop -L"
         }
       ]
     }
